--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -8,9 +8,10 @@
   <%= f.hidden_field :category_id, value: 'hi' %>
 
   <select name=:category[name]>
-    <option value="1" selected="selected">breakfast</option>
-    <option value="2">lunch</option>
-    <option value="3">Editor</option>
+    <option value="breakfast" selected="selected">Breakfast</option>
+    <option value="lunch">Lunch</option>
+    <option value="dinner">Dinner</option>
+    <option value="beverage" selected="selected">Beverage</option>
   </select>
 
   <%= f.label :name %>
