--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               </li>
             <% else %>
               <li><%= link_to "Register", new_user_path %></li>
-              <li><%= link_to "Log in", new_session_path %></li>
+              <li><%= link_to "Log in", "/sessions/new" %></li>
             <% end %>
           </ul>
         </nav>
