--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Home Page</h1>
 <p>Find me in app/views/staticpages/index.html.erb</p>
+
+<h2>Categories</h2>
+<div class="categories-container">
+	<% @categories.each do |category| %>
+		<%= link_to category.name, category %>
+	<% end %>
+</div>
