--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -5,14 +5,7 @@
 
   <%= f.hidden_field :user_id, value: '@current_user.id' %>
 
-  <%= f.hidden_field :category_id, value: 'hi' %>
-
-  <select name=:category[name]>
-    <option value="breakfast" selected="selected">Breakfast</option>
-    <option value="lunch">Lunch</option>
-    <option value="dinner">Dinner</option>
-    <option value="beverage" selected="selected">Beverage</option>
-  </select>
+  <%= select_tag :categories, options_for_select(@categories.collect{ |c| [c.name, u.id] }), class: 'form-control' %>
 
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
