--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -5,7 +5,7 @@
 
   <%= f.hidden_field :user_id, value: '@current_user.id' %>
 
-  <%= select_tag :categories, options_for_select(@categories.collect{ |c| [c.name, u.id] }), class: 'form-control' %>
+  <%= select_tag :categories, options_for_select(@categories.collect{ |c| [c.name, c.id] }), class: 'form-control' %>
 
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
