--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Recipes#show</h1>
-<p>Find me in app/views/recipes/show.html.erb</p>
+<h1><%= @recipe.name %></h1>
+<div class="author">By <%= @recipe.user.name %></div>
+<div class="recipe-difficulty">Difficulty Level: <%= @recipe.difficulty %></div>
+<div class="description recipe-description">Description: <%= @recipe.description %></div>
+<div class="recipe-instructions">Instructions: <%= @recipe.instructions %></div>
+<div class="recipe-category">Category: <%= link_to @recipe.category.name, @recipe.category %></div>
+
