--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @recipe.name %></h1>
-<div class="author">By <%= @recipe.user.name %></div>
+<div class="author">By <%= @recipe.submitter.name %></div>
 <div class="recipe-difficulty">Difficulty Level: <%= @recipe.difficulty %></div>
 <div class="description recipe-description">Description: <%= @recipe.description %></div>
 <div class="recipe-instructions">Instructions: <%= @recipe.instructions %></div>
