--- a/app/views/recipe_ingredients/new.html.erb
+++ b/app/views/recipe_ingredients/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add Ingredient</h1>
-  <%= render 'shared/errors', locals: { object: @ingredient } %>
+  <%= render partial: 'shared/errors', locals: { object: @recipe_ingredient } %>
 <%= form_for [@recipe, @recipe_ingredient] do |f| %>
 
   <%= f.hidden_field :recipe_id, value: @recipe.id %>
