--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Recipes#edit</h1>
-<p>Find me in app/views/recipes/edit.html.erb</p>
+<h1>Update your Recipe</h1>
+
+<%= render partial: 'shared/errors', locals: { object: @recipe } %>
+
+<%= form_for @recipe do |f| %>
+
+  <%= f.hidden_field :user_id, value: @current_user.id %>
+
+  <%= f.label :category %>
+  <%= f.hidden_field :category_id, value: @recipe.category_id %>
+
+  <%= f.label :name %>
+  <%= f.text_field :name, value: @recipe.name, class: 'form-control' %>
+
+  <%= f.label :difficulty %>
+  <%= f.number_field :difficulty, value: @recipe.difficulty, min: 1, max: 10, class: 'form-control' %>
+
+  <%= f.label :description %>
+  <%= f.text_field :description, value: @recipe.description, class: 'form-control' %>
+
+  <%= f.label :instructions %>
+  <%= f.text_area :instructions, value: @recipe.instructions, cols: "30", rows: "10", class: 'form-control' %>
+
+  <%= f.submit "Submit", class: "btn btn-primary" %>
+<% end %>
