--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,3 +4,4 @@
 <div class="description recipe-description">Description: <%= @recipe.description %></div>
 <div class="recipe-instructions">Instructions: <%= @recipe.instructions %></div>
 <div class="recipe-category">Category: <%= link_to @recipe.category.name, @recipe.category %></div>
+<div class="rating">Rating: <%= @recipe.rating %> (<%= @recipe.ratings.length %>)</div>
