--- a/app/views/recipe_ingredients/new.html.erb
+++ b/app/views/recipe_ingredients/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add Ingredient</h1>
-  <%= render partial: 'shared/errors', locals: { object: @recipe_ingredient } %>
+
 <%= form_for [@recipe, @recipe_ingredient] do |f| %>
 
   <%= f.hidden_field :recipe_id, value: @recipe.id %>
@@ -8,7 +8,7 @@
   <%= f.number_field :amount, min: 0, max: 10000, class: 'form-control' %>
 
   <%= f.label :ingredient %>
-  <%= f.text_field :ingredient, class: 'form-control' %>
+  <%= f.text_field :measurement, class: 'form-control' %>
 
   <%= f.label :measurement %>
   <%= f.text_field :measurement, class: 'form-control' %>
