--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,3 +20,18 @@ textarea {
   margin-bottom:10px;
   }
 }
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 2.5em;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding-top: 9px;
+  font-weight: 600;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
