--- a/app/views/recipe_ingredients/new.html.erb
+++ b/app/views/recipe_ingredients/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.number_field :amount, min: 0, max: 10000, class: 'form-control' %>
 
   <%= f.label :ingredient %>
-  <%= f.text_field :measurement, class: 'form-control' %>
+  <%= f.text_field :ingredient, class: 'form-control' %>
 
   <%= f.label :measurement %>
   <%= f.text_field :measurement, class: 'form-control' %>
