adds finish button to recipe_ingredient new page

--- a/app/views/recipe_ingredients/new.html.erb
+++ b/app/views/recipe_ingredients/new.html.erb
@@ -15,3 +15,5 @@
 
   <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
+<br>
+<%= link_to "Finish Recipe", @recipe, class: "btn btn-primary" %>
