fixed bug: recipes going off the page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,3 +35,13 @@ textarea {
     text-decoration: none;
   }
 }
+
+.recipe-description {    
+    width:500px;
+    word-wrap: break-word;
+}
+
+.recipe-instructions{    
+    width:500px;
+    word-wrap: break-word;
+}
