fix flash persisting to next visited page, and add errors to user create and login

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1> New Account Form:</h1>
-
+  <%= render partial: 'shared/errors', locals: { errors: @errors } %>
   <%= render 'form' %>
 </div>
