--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,7 +1,7 @@
-<% if object.errors.any? %>
+<% if errors %>
   <div id="error_explanation">
     <ul>
-    <% object.errors.full_messages.each do |msg| %>
+    <% errors.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
