--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1> Edit Form:</h1>
-
+  <%= render partial: 'shared/errors', locals: { errors: @errors } %>
   <%= render 'form' %>
 </div>
