update index page to not print a recipe if none were submitted, add raters association to recipe

--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -4,19 +4,21 @@
 	<div class="categories-container">
 	<% @categories.each do |category| %>
 		<h2><%= link_to category.name, category %></h2>
-    <div id="<%= "recipe-#{category.highest_rated_recipe.id}"%>" class="recipe-holder">
-      <table>
-        <tr>
-          <td><%= link_to category.highest_rated_recipe.name, category.highest_rated_recipe %></td>
-        </tr>
-        <tr>
-          <td>by <%= category.highest_rated_recipe.submitter.name %></td>
-        </tr>
-        <tr>
-          <td>Rating: <%= category.highest_rated_recipe.rating %></td>
-        </tr>
-      </table>
-    </div>
+    <% if category.highest_rated_recipe %>
+      <div id="<%= "recipe-#{category.highest_rated_recipe.id}"%>" class="recipe-holder">
+        <table>
+          <tr>
+            <td><%= link_to category.highest_rated_recipe.name, category.highest_rated_recipe %></td>
+          </tr>
+          <tr>
+            <td>by <%= category.highest_rated_recipe.submitter.name %></td>
+          </tr>
+          <tr>
+            <td>Rating: <%= category.highest_rated_recipe.rating %></td>
+          </tr>
+        </table>
+      </div>
+      <% end %>
     <br>
 	<% end %>
 	</div>
