--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,7 +2,9 @@
     <h1>Category: <%= link_to @recipe.category.name, @recipe.category %></h1>
     <h1><%= @recipe.name %></h1>
     <h4>Description: <%= @recipe.description %></h4>
-    <h3>Avg. Rating: <%= @recipe.rating %> from <%= @recipe.ratings.length %> Votes</h3>
+    <% if rating_view %>
+        <h3>Avg. Rating: <%= @recipe.rating %> from <%= @recipe.ratings.length %> Votes</h3>
+    <% end %>
     <h3>By <%= @recipe.submitter.name %></h3>
     <h3>Difficulty Level: <%= @recipe.difficulty %></h3>
 </div>
@@ -38,14 +40,15 @@
   <% else %>
     <div class="rating-form">
         <%= form_for @rating do |f| %>
-            <%= hidden_field_tag :recipe_id, @recipe.id%>
+            <%= hidden_field_tag :recipe_id, @recipe.id %>
+            <%= hidden_field_tag :rating_id, @rating.id %>
                 Rating: <%= f.select :value,
                 options_for_select([
                                     [1,1],
                                     [2,2],
                                     [3,3],
                                     [4,4],
-                                    [5,5]], selected: :value) %><br>
+                                    [5,5]], selected: @rating.value) %><br>
             <%= f.submit "Re-Rate", class: "btn btn-primary" %>
         <% end %>
     <% end %>
