--- a/app/views/recipe_ingredients/edit.html.erb
+++ b/app/views/recipe_ingredients/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Add Ingredient</h1>
+  <%= render partial: 'shared/errors', locals: { errors: @errors } %>
 
 <%= form_for [@recipe, @recipe_ingredient] do |f| %>
 
